multicluster/kubernetes/cluster1/backend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kuma-demo
  namespace: kuma-demo
  labels:
    kuma.io/sidecar-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: kuma-demo
  labels:
    app: backend
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        version: "1"
    spec:
      containers:
        - name: nginx
          image: "hashicorp/http-echo"
          args: ['-text=cluster: cluster-1, service: backend, version: 1']
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5678
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: kuma-demo
  annotations:
    5678.service.kuma.io/protocol: "http"
    ingress.kubernetes.io/service-upstream: "true"
spec:
  selector:
    app: backend
  ports:
    - port: 5678
      targetPort: 5678
